--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "mongoose": "^5.13.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-modal": "^3.14.3",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
